Replace custom code to strip 'www' in setting override permission warning

SettingsOverrideHandler::FormatUrlForDisplay() implements a custom way to
strip a 'www' prefix from an origin. Instead the method should use the
existing function, url_formatter:StripWWW(). This CL makes this change.

Bug: 717283
Change-Id: I273bec6b5677f39d45298b334b1c66bde9cc1849
Reviewed-on: https://chromium-review.googlesource.com/646955
Commit-Queue: catmullings <catmullings@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499658}